[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1" }
shuttle = { path = "/Users/benginow/Projects/research/shuttle" }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }